# Logic-Accelerated-DPN-Discovery

./: .gitignore  evaluation.ipynb  evaluation.md  main.py  output.pnml  pyproject.toml  real_world_log.ipynb  real_world_log.md  smt_benchmark.ipynb
data/: loan_example.json
data/fibonacci/: data.csv
data/loan_application/: data.csv
data/loop/: data.csv
docs/: deep-research-report.md  dpn_discovery.drawio  formal_problem_definition.md  implementation_details.md
dpn_discovery/: __init__.py  __main__.py  classifiers.py  dpn_transform.py  guard_synthesis.py  ilp_pipeline.py  models.py  pipeline.py  postcondition_synthesis.py  preprocessing.py  pta.py  regions.py  state_merging.py  visualization.py
dpn_discovery/smt/: __init__.py  base.py  cvc5_solver.py  yices2_solver.py  z3_solver.py
output/Hospital Billing/: dpn.pnml
output/Road Fine/: dpn.pnml
output/Sepsis/: dpn.pnml
output/fibonacci/: dpn.pnml
output/loan_application/: dpn.pnml
output/loop/: dpn.pnml
tests/: test_pipeline.py  test_symbolic_pruning.py
